--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
+     <link rel="stylesheet" href="./src/main.css">
      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin="" defer></script>
@@ -14,7 +15,32 @@
   </head>
   <body>
     <main id="app">
-      <div id="map" style="height: 100vh;"></div>
+      <div class="top-container">
+        <h1>IP Address Tracker</h1>
+        <div class="input-container">
+          <input type="text" placeholder="Search for any IP address or domain">
+          <button class="submit">></button>
+        </div>
+        <div class="info-container">
+          <div id="ip-address-container">
+            <span>IP Address</span>
+            <h2 id="ip-address"></h2>
+          </div>
+          <div id="location-container">
+            <span>Location</span>
+            <h2 id="location"></h2>
+          </div>
+          <div id="timezone-container">
+            <span>Timezone</span>
+            <h2 id="timezone"></h2>
+          </div>
+          <div id="isp-container">
+            <span>ISP</span>
+            <h2 id="isp"></h2>
+          </div>
+        </div>
+      </div>
+      <div id="map"></div>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
