--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main id="app">
       <div class="top-container">
-        <h1>IP Address Tracker</h1>
+        <h1 class="header">IP Address Tracker</h1>
         <div class="input-container">
           <input type="text" placeholder="Search for any IP address or domain">
           <button class="submit">></button>
@@ -24,19 +24,19 @@
         <div class="info-container">
           <div id="ip-address-container">
             <span>IP Address</span>
-            <h2 id="ip-address"></h2>
+            <h2 id="ip-address">-</h2>
           </div>
           <div id="location-container">
             <span>Location</span>
-            <h2 id="location"></h2>
+            <h2 id="location">-</h2>
           </div>
           <div id="timezone-container">
             <span>Timezone</span>
-            <h2 id="timezone"></h2>
+            <h2 id="timezone">-</h2>
           </div>
           <div id="isp-container">
             <span>ISP</span>
-            <h2 id="isp"></h2>
+            <h2 id="isp">-</h2>
           </div>
         </div>
       </div>
