added IP search functionality

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="top-container">
         <h1 class="header">IP Address Tracker</h1>
         <div class="input-container">
-          <input type="text" placeholder="Search for any IP address or domain">
-          <button class="submit">></button>
+          <input id="ip-input" type="text" placeholder="Search for any IP address or domain">
+          <button id="submit">></button>
         </div>
         <div class="info-container">
           <div id="ip-address-container">
