--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       </div>
       <div id="map"></div>
     </main>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
