updated README and input placeholder text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="top-container">
         <h1 class="header">IP Address Tracker</h1>
         <div class="input-container">
-          <input id="ip-input" type="text" placeholder="Search for any IP address or domain">
+          <input id="ip-input" type="text" placeholder="Search for any IP address">
           <button id="submit">></button>
         </div>
         <div class="info-container">
