--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <main id="app">
       <div class="top-container">
         <h1 class="header">IP Address Tracker</h1>
-        <div class="input-container">
+        <form id="form" class="input-container">
           <input id="ip-input" type="text" placeholder="Search for any IP address">
-          <button id="submit">></button>
-        </div>
+          <submit id="submit">></submit>
+        </form>
         <div class="info-container">
           <div id="ip-address-container">
             <span>IP Address</span>
